# oneiric

./: .codespellrc  .coverage  .coverage-ratchet.json  .dockerignore  .gitignore  .gitignore.bak  .gitleaks.toml  .lycheecache  .lycheeignore  .mcp.json  .pre-commit-config.yaml  .pyscn.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MCP_SERVER_MIGRATION_PLAN.md  MCP_SERVER_MIGRATION_SUMMARY.md  MIGRATION_COMPLETE_SUMMARY.md  Makefile  NETDATA_ADAPTER_USAGE.md  ONEIRIC_EVENT_LOGGING_FIX_PLAN.md  ONNX_GUIDE.md  OPERATIONAL_MODES_QUICK_REFERENCE.md  Procfile  QUICKSTART.md  QUICKSTART.md.backup  QWEN.md  README.md  RULES.md  complexipy-results.json  coverage.json  coverage.xml  deploy.yaml  docker-compose.dev.yml  docker-compose.yml  json  main.py  markdown  mypy.ini  (+2 more)
.github/workflows/: release.yml
.hypothesis/constants/: 00388096ca26904a  005b58ef368bdcaa  00bae8a79ec18f94  020910c655ece93f  02635acc6afa482b  02fbd45d0fe3c88b  03707f898ef048f4  03c77cd78a6cd3d5  03cea4f5e7616eca  06e8c5e8873c6520  077fe36ee7f9cd80  08a16821bf09af3e  09eef61632272996  0b2a472d7fdbc880  0c2339721504ba6b  12434242af2f530c  140c210b77f781d6  14ffb5593d3e8082  15a55dba62cf0576  161da89557dd300f  16b637ab6a015deb  1a5f465e485a9aa4  1aac501172b1f11a  1b4a92248f4b6262  1bf8831dad52f5ff  1dd7e3d49295dec1  1f498347a6c682ea  1ff0da76e805c6ae  23b08532e80ee32b  24b898e17a3e05d4  26a2706085b85beb  274d08d186632de0  279cd8c77ab27636  2802b57dc8213dd6  2bf4696602865a45  32d82f5d5247f4e4  32e1a5ffaff0ea7e  33b9e3a1b4e433ab  3605cc93f34ee22f  3664b6201e4ddf0c  (+184 more)
.pyscn/reports/: analyze_20260629_084334.json  analyze_20260629_084837.json  analyze_20260629_115116.json  analyze_20260629_115640.json  analyze_20260629_120304.json  analyze_20260629_120441.json  analyze_20260629_120738.json  analyze_20260629_120914.json  analyze_20260629_121435.json  analyze_20260629_122350.json  analyze_20260629_123257.json  analyze_20260629_124711.json  analyze_20260629_125935.json  analyze_20260629_130149.json  analyze_20260629_133609.json  analyze_20260629_135859.json  analyze_20260629_142714.json  analyze_20260629_143533.json  analyze_20260629_145004.json  analyze_20260629_145452.json  analyze_20260629_145644.json  analyze_20260629_150254.json  analyze_20260629_150652.json  analyze_20260629_160736.json  analyze_20260629_163232.json  analyze_20260703_051712.json  analyze_20260703_051747.json  analyze_20260703_054734.json  analyze_20260703_060614.json  analyze_20260703_060941.json  analyze_20260703_063313.json  analyze_20260703_065654.json  analyze_20260703_224943.json  analyze_20260704_003033.json  analyze_20260704_011335.json  analyze_20260704_012743.json  analyze_20260704_025058.json  analyze_20260704_030751.json  analyze_20260704_031220.json  analyze_20260704_031926.json  (+6 more)
benches/: test_ulid_resolution_performance.py
config/: lite.yaml  standard.yaml
docs/: ACB_COMPARISON.md  ADAPTER_DISCOVERY_AND_HOT_SWAP_PLAN.md  ADAPTER_LIFECYCLE_TEMPLATE.md  ADAPTER_MIGRATION_PLAN.md  AI_AGENT_COMPATIBILITY.md  ARCHITECTURAL_AUDIT_2025.md  BUILD_PROGRESS.md  BUILD_PROMPTS.md  CLI_REFERENCE.md  CLI_TESTS_COMPLETION.md  CRITICAL_AUDIT_REPORT.md  DOCUMENTATION_AUDIT_SUMMARY.md  DOCUMENTATION_ENHANCEMENT_SUMMARY.md  DOMAIN_BRIDGE_TESTS_COMPLETION.md  GRAND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PHASE_TRACKER.md  INTEGRATION_TESTS_COMPLETION.md  LIFECYCLE_TESTS_COMPLETION.md  LOAD_TESTING.md  LOGGING_OBSERVABILITY_PLAN.md  MCP_SERVER_CLI_STANDARD.md  MCP_SERVER_MIGRATION_SUMMARY.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_GUIDE.md  NEW_ARCH_SPEC.md  OBSERVABILITY_GUIDE.md  ONEIRIC_ADMIN_SHELL.md  ONEIRIC_ADMIN_SHELL.md.backup  ONEIRIC_ADMIN_SHELL.md.backup.json  ONEIRIC_EVENT_LOGGING_FIX_PLAN.md  ONEIRIC_SHELL_QUICKREF.md  ONEIRIC_VS_ACB.md  ONNX_GUIDE.md  PHASES_SUMMARY.md  PLATFORM_COMPARISON.md  PYTHON_CODE_QUALITY_AUDIT.md  README.md  README.md.bak  REBUILD_VS_REFACTOR.md  REMOTE_MANIFEST_SCHEMA.md  (+33 more)
docs/ai/: AI_AGENT_COMPATIBILITY.md  ONNX_GUIDE.md
docs/analysis/: ACB_ADAPTER_ACTION_IMPLEMENTATION.md  ADAPTER_GAP_AUDIT.md  ADAPTER_OBSOLESCENCE_ANALYSIS.md  ADAPTER_STRATEGY.md  DNS_FILE_TRANSFER_ADAPTER_PLAN.md  DUCKDB_ADAPTER.md  EMBEDDING_ADAPTERS.md  GRAPH_ADAPTERS.md  NOSQL_ADAPTERS.md  ONEIRIC_INTEGRATION_STATUS.md  OTEL_AND_DEVICE_DISCOVERY.md  PROTOCOLS_IMPLEMENTATION_PLAN.md  QUALITY_AUDITS.md  VECTOR_ADAPTERS.md
docs/archive/: ACB_COMPARISON.md  DOCUMENTATION_AUDIT_SUMMARY.md  README.md
docs/deployment/: CLOUD_RUN_BUILD.md  DOCKER_DEPLOYMENT.md  KUBERNETES_DEPLOYMENT.md  SYSTEMD_DEPLOYMENT.md
docs/examples/: CRACKERJACK_OBSERVABILITY.md  EVENT_ROUTING_OBSERVABILITY.md  FASTBLOCKS_OBSERVABILITY.md  FASTBLOCKS_PARITY_FIXTURE.yaml  LOCAL_CLI_DEMO.md  SESSION_MGMT_MCP_OBSERVABILITY.md  basic_resolution.py  demo_settings.toml  lifecycle_hotswap.py  remote_manifest.py  serverless_deployment.py
docs/examples/plugins/hello_oneiric_plugin/: README.md  pyproject.toml
docs/examples/plugins/hello_oneiric_plugin/hello_oneiric_plugin/: __init__.py
docs/guides/: operational-modes.md  (+2 more)
examples/: onnx_example.py
k8s/: kustomization.yaml
oneiric/: README.md  cli.py  cli.py.bak  demo.py  plugins.py
scripts/: analyze_test_timings.py  dev-start.sh  final_quality_check_solution.py  generate_manifest.py  onnx_runner.sh  patch_crackerjack_complexipy.py  patch_crackerjack_skylos.py  render_deploy_config.py  run_crackerjack_api.py  run_crackerjack_direct.py  run_crackerjack_patched.py  run_crackerjack_with_patch.py  run_crackerjack_without_skylos.py  run_quality_checks_custom.py  run_skylos_batched.py  run_skylos_with_timeout.py  sign_manifest.py  upload_artifacts.py
settings/: lavinmq.yaml
systemd/: oneiric.service
tests/: README.md  __init__.py  conftest.py  test_actions_coverage.py  test_core_cli_coverage.py  test_coverage_gaps.py  test_dhara_pusher_coverage.py  test_druva_pusher_coverage.py  test_llm_observability_coverage.py  test_plugins.py  test_ulid_collision.py  test_ulid_migration.py  test_ulid_resolution.py  test_ulid_resolution_simple.py  test_ulid_traceability.py  test_vector_adapters_coverage.py
(+528 files in other folders)
