[project]
name = "oneiric"
version = "0.13.8"
description = "Universal resolution layer for pluggable components with hot-swapping and remote manifest delivery"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "structlog>=26.1.0",
    "opentelemetry-api>=1.42.1",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
    "cryptography>=49.0.0",
    "google-cloud-storage>=3.12.0",
    "google-cloud-secret-manager>=2.29.0",
    "email-validator>=2.3.0",
    "numpy>=2.5.0",
    "tenacity>=9.1.4",
    "aiobreaker>=1.2.0",
    "watchfiles>=1.2.0",
    "anyio>=4.14.1",
    "msgspec>=0.21.1",
    "networkx>=3.6.1",
    "ipython>=9.15.0",  # Admin shell support
    "dhara>=0.11.2",
]


[project.scripts]
oneiric = "oneiric.cli:main"

[project.urls]
ONNXRuntime-Compatibility = "https://github.com/microsoft/onnxruntime/issues/new"  # Placeholder for tracking ONNX compatibility


[tool.uv]
package = true
prerelease = "allow"

[tool.setuptools.packages.find]
include = ["oneiric*"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=oneiric",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "security: Security-related tests",
    "integration: Integration tests",
    "slow: Slow-running tests (>5s per test)",
    "fast: Fast-running tests (<1s per test)",
    "unit: Unit tests (isolated, no I/O)",
    "e2e: End-to-end tests (full system)",
    "adapter: Adapter-specific tests",
    "remote: Remote manifest tests",
    "runtime: Runtime orchestration tests",
]

[tool.coverage.run]
source = [
    "oneiric",
]
omit = [
    "tests/*",
    "**/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py313"
line-length = 88
fix = true
unsafe-fixes = true
show-fixes = true
output-format = "full"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "C901",
    "F",
    "I",
    "UP",
]
ignore = [
    "E402",
    "F821",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.crackerjack]
# QA adapter timeouts (in seconds)
# Note: Hook lists are not configurable via pyproject.toml - hooks are defined in crackerjack
# These timeouts apply to both direct adapter execution AND hook execution
skylos_timeout = 600  # 10 minutes for skylos analysis (analyzes 71 files)
refurb_timeout = 600  # 10 minutes for refurb analysis (analyzes 178 Python files)

[tool.skylos]
exclude_folders = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".tox",
    ".mypy_cache",
    "htmlcov",
    ".pytest_cache",
    "tests",
    "adapters",  # Exclude external service integration wrappers (87 files) - focus analysis on core framework logic
]
confidence_threshold = 86

# Test execution configuration
test_timeout = 1200  # 20 minutes to accommodate skylos analysis (increased from 600s default)

# pip-audit configuration to ignore specific vulnerabilities
# Note: crackerjack reads from tool_commands.py, not this section; kept for documentation
[tool.pip-audit]
ignore-vulns = [
    "CVE-2025-53000",
    "CVE-2026-0994",
    "CVE-2025-69872",
    "CVE-2025-14009",
    "PYSEC-2024-277",
    "PYSEC-2025-183",
    "PYSEC-2025-211",
    "PYSEC-2025-212",
    "PYSEC-2025-213",
    "PYSEC-2025-214",
    "PYSEC-2025-215",
    "PYSEC-2025-216",
    "PYSEC-2025-217",
    "PYSEC-2025-218",
]

# NOTE: Zuban configuration moved to mypy.ini due to parsing bug
# See: https://github.com/RobertCraigie/zuban/issues/XXX
# Zuban v0.3.0 has a bug parsing [tool.zuban] from pyproject.toml
# Error: "Expected tool.mypy to be simple table in pyproject.toml"
# Use mypy.ini for zuban type checking configuration

[tool.refurb]
ignore = [
    "FURB184",  # Assignment chaining - optional style preference
    "FURB111",  # Replace lambda with object - test mocking pattern
]

[tool.complexipy]
# Temporary increased threshold while refactoring complex functions
# Target: reduce to 10 over time through incremental refactoring
# Note: CLI formatting functions (_print_*) have higher inherent complexity
# due to multiple conditional output paths - these are candidates for
# future refactoring using a table-driven or template-based approach
max_complexity = 15

[tool.creosote]
# Creosote configuration for detecting unused dependencies
# Paths to scan for imports
paths = ["oneiric"]
# Dependency file to check
deps-file = "pyproject.toml"
# Dependencies to exclude from unused check (optional adapters and dev tools)
exclude-deps = [
    # Optional adapter dependencies (conditionally imported via lazy imports)
    "email-validator",
    "google-cloud-secret-manager",  # Lazy import in secrets/keyring.py
    "google-cloud-storage",  # Lazy import in adapters/storage/gcs.py
    "keyring",  # Lazy import in adapters/secrets/keyring.py
    "watchfiles",  # Lazy import in runtime/watchers.py
    # Dhara MCP client (httpx used for HTTP, dhara package not directly imported)
    "dhara",
]

[dependency-groups]
# PEP 735 — install with `uv sync --group <name>` or `uv add --group <name> <pkg>`.
# `dev` consolidates the old `project.optional-dependencies.dev` and the
# previous `dependency-groups.dev` into a single group.
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-benchmark>=5.2.3",
    "hypothesis>=6.155.7,<7",  # Pin: transitive via crackerjack; declared for direct test usage
    "freezegun>=1.5.5",
    "uv-bump>=0.5.0",
    "crackerjack>=0.66.1",
    "session-buddy>=0.19.18",
    "filelock>=3.29.4",  # Fix for CVE-2025-68146
    "zensical>=0.0.46",
    "sqlalchemy[asyncio]>=2.0.51",
    "pgvector>=0.4.2",
]
secrets-keyring = [
    "keyring>=25.7.0",
]
cache = [
    "coredis>=6.7.0",
]
database = [
    "asyncpg>=0.31.0",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
]
"database-postgres" = [
    "asyncpg>=0.31.0",
]
"database-mysql" = [
    "aiomysql>=0.3.2",
]
"database-sqlite" = [
    "aiosqlite>=0.22.1",
]
"http-aiohttp" = [
    "aiohttp>=3.14.1",
]
"identity-auth0" = [
    "PyJWT>=2.8",
]
dns = [
    "google-cloud-dns>=0.37.0",
]
"dns-gcdns" = [
    "google-cloud-dns>=0.37.0",
]
monitoring = [
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "sentry-sdk>=3.0.0a7",
]
"monitoring-logfire" = [
    "logfire>=4.37.0",
]
"monitoring-otlp" = [
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
]
"monitoring-sentry" = [
    "sentry-sdk>=3.0.0a7",
]
"monitoring-netdata" = [
    "httpx>=0.28.1",
]
"queue-nats" = [
    "nats-py>=2.15.0",
]
storage = [
    "aioboto3>=15.5.0",
    "azure-storage-blob>=12.30.0",
]
"storage-azure" = [
    "azure-storage-blob>=12.30.0",
]
"storage-s3" = [
    "aioboto3>=15.5.0",
]
ai = [
    "openai>=2.44.0",
    "anthropic>=0.113.0",
]
embedding = [
    "openai>=2.44.0",
]
"embedding-openai" = [
    "openai>=2.44.0",
]
"graph-arangodb" = [
    "python-arango>=8.3.3",
]
"graph-duckdb-pgq" = [
    "duckdb>=1.6.0.dev211",
]
"graph-neo4j" = [
    "neo4j>=6.2.0",
]
llm = [
    "openai>=2.44.0",
    "anthropic>=0.113.0",
]
"llm-anthropic" = [
    "anthropic>=0.113.0",
]
"llm-openai" = [
    "openai>=2.44.0",
]
"messaging-mailgun" = [
    "httpx>=0.28.1",
]
"messaging-webpush" = [
    "pywebpush>=2.3.0",
]
"messaging-apns" = [
    "aioapns>=4.0",
]
"messaging-fcm" = [
    "firebase-admin>=7.4.0",
]
"messaging-sendgrid" = [
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
]
"messaging-twilio" = [
    "httpx>=0.28.1",
]
nosql = [
    "motor>=3.7.1",
    "aioboto3>=15.5.0",
    "google-cloud-firestore>=2.28.0",
]
"nosql-dynamo" = [
    "aioboto3>=15.5.0",
]
"nosql-firestore" = [
    "google-cloud-firestore>=2.28.0",
]
"nosql-mongo" = [
    "motor>=3.7.1",
]
"queue-kafka" = [
    "aiokafka>=0.14.0",
]
"queue-lavinmq" = [
    "aiomqtt>=3.0.0a1",
    "aio-pika>=9.6.2",
]
"queue-rabbitmq" = [
    "aio-pika>=9.6.2",
]
"queue-streaming" = [
    "aiokafka>=0.14.0",
    "aio-pika>=9.6.2",
]
"queue-lavinmq-full" = [
    "aiomqtt>=3.0.0a1",
    "aio-pika>=9.6.2",
    "httpx>=0.28.1",
]
"scheduler-gcp" = [
    "google-cloud-pubsub>=2.39.0",
    "google-cloud-tasks>=2.23.0",
]
"file-transfer" = [
    "aioftp>=0.27.2",
    "asyncssh>=2.24.0",
]
vector = [
    "pinecone-client>=6.0.0",
    "qdrant-client>=1.18.0",
    "pgvector>=0.4.2",
    "asyncpg>=0.31.0",
]
"vector-pinecone" = [
    "pinecone-client>=6.0.0",
]
"vector-pgvector" = [
    "pgvector>=0.4.2",
    "asyncpg>=0.31.0",
]
"vector-qdrant" = [
    "qdrant-client>=1.18.0",
]
